# freenet-stdlib

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.claude/skills/release-rust/: SKILL.md
.claude/skills/release-typescript/: SKILL.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  mirror-to-freenet.yml  release.yml
examples/: contract.rs  delegate.rs
rust/: Cargo.toml  build.rs  expanded.rs
rust-macros/: Cargo.toml
rust-macros/src/: common.rs  contract_impl.rs  delegate_impl.rs  lib.rs
rust/examples/: chatroom.rs  composable_contract.rs  contract.rs  contract_components.rs  typed_contract.rs
rust/src/: client_api.rs  client_request_generated.rs  code_hash.rs  composers.rs  contract_composition.rs  contract_interface.rs  delegate_host.rs  delegate_interface.rs  host_response_generated.rs  lib.rs  log.rs  memory.rs  parameters.rs  rand.rs  versioning.rs
rust/src/client_api/: browser.rs  client_events.rs  regular.rs  streaming.rs  ws_streaming.rs
rust/tests/: chatroom.rs  composable_contract.rs  contract_components.rs  typed_contract.rs
schemas/flatbuffers/: client_request.fbs  common.fbs  host_response.fbs
scripts/: release-rust-ver.sh  release-typescript-ver.sh
typescript/: .gitignore  Cargo.toml  README.md  jest.config.ts  package.dev.sh  package.json  package.prod.sh  tsconfig.json
typescript/src/: client-request.ts  common.ts  host-response.ts  index.ts  lib.rs  streaming.ts  websocket-interface.ts
typescript/tests/: delegates-and-responses.test.ts  streaming.test.ts  websocket-interface.test.ts
(+28 files in other folders)
