[package]
name = "freenet-macros"
version = "0.1.2"
edition = "2021"
rust-version = "1.71.1"
publish = true 
description = "Procedural macros for Freenet"
license = "LGPL-3.0-only"
repository = "https://github.com/freenet/freenet-stdlib"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
